--- a/doc/inc/static/bibliography.bib
+++ b/doc/inc/static/bibliography.bib
@@ -70,3 +70,12 @@ Abgerufen am 27. September 2015}
 	year = {1986},
 	pages = {143--150}
 }
+
+@article{hart_sphere_1994,
+	title = {Sphere {Tracing}: {A} {Geometric} {Method} for the {Antialiased} {Ray} {Tracing} of {Implicit} {Surfaces}},
+	volume = {12},
+	journal = {The Visual Computer},
+	author = {Hart, John C.},
+	year = {1994},
+	pages = {527--545}
+}
