Provide the input of today's meeting, add next planned meeting and already some questions

--- a/doc/inc/static/attachment/10_meeting_minutes.tex
+++ b/doc/inc/static/attachment/10_meeting_minutes.tex
@@ -6,4 +6,6 @@
 
 \VerbatimInput[label=20150921]{inc/static/attachment/minutes/20150921}
 \newpage
-\VerbatimInput[label=20151005]{inc/static/attachment/minutes/20151005}
+\VerbatimInput[label=20151004]{inc/static/attachment/minutes/20151004}
+\newpage
+\VerbatimInput[label=20151011]{inc/static/attachment/minutes/20151011}
