--- a/doc/mte7101.tex
+++ b/doc/mte7101.tex
@@ -75,6 +75,10 @@
 %\definecolor{linkcolor}{rgb}{0,0,0.8}              % Blue for the web- and cd-version!
 \definecolor{linkcolor}{rgb}{0,0,0}                 % Black for the print-version!
 \colorlet{Black}{black}
+\definecolor{keywords}{rgb}{255,0,0}
+\definecolor{red}{rgb}{0.6,0,0}
+\definecolor{green}{rgb}{0,0.5,0}
+\definecolor{blue}{rgb}{0,0,0.5}
 
 %---------------------------------------------------------------------------
 
@@ -247,6 +251,26 @@
     {~}{{\textasciitilde}}1
     {?}{{\textcolor{black}{?}}}1
 }
+% Define a list style for Python programming language
+\newcommand\pythonstyle{\lstset{language=Python,
+        basicstyle=\ttm,
+        keywordstyle=\ttb\color{blue},
+        emph={ray_cast},
+        emphstyle=\ttb\color{red},
+        style,
+        frame=tb,
+        commentstyle=\color{green},
+        showstringspaces=false,
+        identifierstyle=\color{black},
+        procnamekeys={def,class},
+        otherkeywords={self}}}
+% Define an environment for Python programming language
+\lstnewenvironment{python}[1][]
+{
+\pythonstyle{}
+\lstset{#1}
+}
+{}
 
 % Table of contents
 %---------------------------------------------------------------------------
