Remove delimiters from verbatim environment: The shall explicitely being printed as they are part of the documents

--- a/doc/mte7101.tex
+++ b/doc/mte7101.tex
@@ -173,7 +173,7 @@
     label=\fbox{\color{Black}},
     labelposition=topline,
     %
-    commandchars=\|\(\), % escape character and argument delimiters for
+    % commandchars=\|\(\), % escape character and argument delimiters for
     % commands within the verbatim
     % commentchar=*        % comment character
 }
