--- a/doc/inc/static/bibliography.bib
+++ b/doc/inc/static/bibliography.bib
@@ -79,3 +79,63 @@ Abgerufen am 27. September 2015}
 	year = {1994},
 	pages = {527--545}
 }
+
+@book{division_introduction_1996,
+	series = {Research report},
+	title = {An {Introduction} to {Implicit} {Techniques}},
+	url = {https://books.google.ch/books?id=Ew40GwAACAAJ},
+	publisher = {IBM T.J. Watson Research Center},
+	author = {Division, International Business Machines Corporation Research and Menon, J.},
+	year = {1996}
+}
+
+@article{hart_ray_1993,
+	title = {Ray tracing implicit surfaces},
+	journal = {Siggraph 93 Course Notes: Design, Visualization and Animation of Implicit Surfaces},
+	author = {Hart, John C},
+	year = {1993},
+	pages = {1--16}
+}
+
+@article{jones_3d_2006,
+	title = {3D {Distance} {Fields}: {A} {Survey} of {Techniques} and {Applications}},
+	volume = {12},
+	issn = {1077-2626},
+	url = {http://dx.doi.org/10.1109/TVCG.2006.56},
+	doi = {10.1109/TVCG.2006.56},
+	number = {4},
+	journal = {IEEE Transactions on Visualization and Computer Graphics},
+	author = {Jones, Mark W. and Baerentzen, J. Andreas and Sramek, Milos},
+	month = jul,
+	year = {2006},
+	keywords = {cut locus, Distance field, distance transform., fast marching method, level-set method, medial axis, skeletonization, visualization, volume, volume data, voxel, voxelization},
+	pages = {581--599}
+}
+
+@article{perlin_hypertexture_1989,
+	title = {Hypertexture},
+	volume = {23},
+	issn = {0097-8930},
+	url = {http://doi.acm.org/10.1145/74334.74359},
+	doi = {10.1145/74334.74359},
+	number = {3},
+	journal = {SIGGRAPH Comput. Graph.},
+	author = {Perlin, K. and Hoffert, E. M.},
+	month = jul,
+	year = {1989},
+	pages = {253--262}
+}
+
+@article{hart_ray_1989,
+	title = {Ray {Tracing} {Deterministic} 3-{D} {Fractals}},
+	volume = {23},
+	issn = {0097-8930},
+	url = {http://doi.acm.org/10.1145/74334.74363},
+	doi = {10.1145/74334.74363},
+	number = {3},
+	journal = {SIGGRAPH Comput. Graph.},
+	author = {Hart, J. C. and Sandin, D. J. and Kauffman, L. H.},
+	month = jul,
+	year = {1989},
+	pages = {289--296}
+}
