--- a/doc/inc/51_illumination_models.tex
+++ b/doc/inc/51_illumination_models.tex
@@ -25,65 +25,125 @@ Lokale Beleuchtungsmodelle aggregieren Daten von benachbarten, eben lokalen, Obe
 Dies ist dadurch bedingt, dass die traditionell verwendeten Algorithmen zur Berechnung der Sichtbarkeit von Oberflächen, über keine globalen Daten verfügen.
 
 Als Beispiel für ein lokales Beleuchtungsmodell dient das Phong-Beleuchtungsmodell, welches von Bui-Tong Phong entwickelt wurde.
+
+\todo[inline]{Add image the phong lighting model here}
+
 Es beschreibt die reflektierte (Licht-) Intensität als Zusammensetzung aus der ambienten, der diffusen und der ideal spiegelnden Reflexion einer Oberfläche:
-\begin{equation}
-    I = I_{ambient} + I_{diffuse} + I_{specular}
-\end{equation}
+\begin{gather}
+    I = I_{ambient} + I_{diffuse} + I_{specular} + I_{emissive}
+\end{gather}
 oder mathematisch ausgedrückt:
-\begin{equation}
-    I = I_a + k_d \displaystyle\sum_{j=1}^{ls} (\overrightarrow{N} \cdot \overrightarrow{L_j}) + k_s \displaystyle\sum_{j=1}^{ls} (\overrightarrow{N} \cdot \overrightarrow{L_j^`} )
-\end{equation}
+\begin{gather}
+    I(\vv{V}) = k_{a} \cdot L_{a} +
+                k_{d} \displaystyle\sum_{i=0}^{n - 1} L_{i} \cdot (\vv{S_{i}} \cdot \vv{N}) +
+                k_{s} \displaystyle\sum_{i=0}^{n - 1} L_{i} \cdot {(\vv{R_{i}} \cdot \vv{V})}^{k_{e}}
+\end{gather}
 wobei gilt:
 \begin{itemize}
-    \item $I$:                      Die reflektierte (Licht-) Intensität
-    \item $I_a$:                    Reflektion bedingt durch die Beleuchtung des Raumes
-    \item $k_d$:                    Konstante für die diffuse Komponente des reflektierten Lichtes
-    \item $\overrightarrow{N}$:     Einheitsnormale der Oberfläche
-    \item $\overrightarrow{L_j}$:   Vektor in Richtung der $j$-ten Lichtquelle
-    \item $k_s$:                    Koeffizient der spiegelenden Komponente
-    \item $\overrightarrow{L_j^`}$: Vektor in der Hälfte zwischen dem Betrachter und der $j$-ten Lichtquelle
-    \item $n$:                      Exponent, welcher von der Reflektion der Oberfläche abhängt
-    \item $ls$:                     Anzahl Lichtquellen
+    \item $I(\vv{V})$:              Die reflektierte (Licht-) Intensität in Richtung des Vektors $\vv{V}$
+    \item $n$:                      Anzahl Lichtquellen
+    \item $k_{a} \cdot L_{a}$:      Ambiente Komponente des
+                                    Beleuchtungsmodelles. Mittels diesem Faktor
+                                    wird versucht allem indirekten Licht der
+                                    Szene gerecht zu werden.
+    \item $k_{d}$:                  Konstante für die diffuse Komponente des
+                                    reflektierten Lichtes, basierend auf der
+                                    Wellenlänge bzw. Frequenz
+    \item $\vv{S_{i}}$:             Richtung, in welcher das Licht der $i$-ten
+                                    Lichtquelle ankommt, normalisierter
+                                    Einheitsvektor
+    \item $\vv{N}$:                 Einheitsnormale der Oberfläche
+    \item $k_{s}$:                  Koeffizient der spiegelenden Komponente,
+                                    basierend auf der Wellenlänge bzw. Frequenz
+    \item $\vv{R_{i}}$:             Richtung, in welcher das Licht der $i$-ten
+                                    Lichtquelle reflektiert wird,
+                                    normalisierter Einheitsvektor
+    \item $\vv{V}$:                 Blickrichtung des Betrachters bzw.\ der
+                                    Kamera
+    \item $k_{e}$:                  Exponent, welcher von der Rauheit bzw.
+                                    Reflektion der Oberfläche abhängt
 \end{itemize}
+
+Meist wird der emissive Term bewusst weggelassen, da dieser meist eher für
+Spezialeffekte statt für die Beleuchtung ``normaler'' Objekte benutzt wird.
+
+Der reflektive Vektor $R_{i}$ ist gegeben durch
+
+\begin{gather}
+    R_{i} = S_{i} + 2(S_{i} \cdot N)N
+\end{gather}
+
+Damit die Energieerhaltung gewährleistet ist, muss weiter $k_{d} + k_{s} < 1$
+gelten. Der Winkel zwischen $\vv{R}$ und $\vv{V}$ wird mittels $\cos{\alpha}$
+ermittelt.
+
 
 \subsection{Globale Beleuchtungsmodelle}
 \label{subsec:global_illumination_models}
 
 Sofern nicht anders vermerkt, basiert der folgende Abschnitt auf~\cite{foley_computer_1996}[S. 775ff]
 
-Globale Beleuchtungsmodelle beschreiben die reflektierte (Licht-) Intensität eines Punktes aufgrund direkter Lichteinstrahlung durch Lichtquellen sowie durch alles Licht, welches diesen Punkt nach Reflektion von bzw. Durchdringen der eigenen oder anderer Oberflächen erreicht.
+Globale Beleuchtungsmodelle beschreiben die reflektierte (Licht-) Intensität
+eines Punktes aufgrund direkter Lichteinstrahlung durch Lichtquellen sowie
+durch alles Licht, welches diesen Punkt nach Reflektion von bzw. Durchdringen
+der eigenen oder anderer Oberflächen erreicht.
 
-Bei globalen Beleuchtungsmodellen unterscheidet man zwischen blickwinkelabhängigen Algorithmen, wie etwa Ray Tracing, und zwischen blickwinkelunabhängigen Algorithmen, wie etwa Photon Mapping.
+Bei globalen Beleuchtungsmodellen unterscheidet man zwischen
+blickwinkelabhängigen Algorithmen, wie etwa Ray Tracing, und zwischen
+blickwinkelunabhängigen Algorithmen, wie etwa Photon Mapping.
 
-Blickwinkelabhängige Algorithmen verwenden eine Diskretisierung~\todo{view plane} der sichtbaren Fläche um zu entscheiden, an welchen Punkten, in Blickrichtung des Betrachters, die Beleuchtungsberechnung durchgeführt werden soll. Blickwinkelunabhängige Algorithmen hingegen diskretisieren und verarbeiten die Umgebung um genügend Informationen für die Beleuchtungsberechnung zu haben. Dies erlaubt ihnen die Beleuchtungsberechnung an einem beliebigen Punkt aus einer beliebigen Blickrichtung.
+Blickwinkelabhängige Algorithmen verwenden eine Diskretisierung~\todo{view
+    plane} der sichtbaren Fläche um zu entscheiden, an welchen Punkten, in
+Blickrichtung des Betrachters, die Beleuchtungsberechnung durchgeführt werden
+soll. Blickwinkelunabhängige Algorithmen hingegen diskretisieren und
+verarbeiten die Umgebung um genügend Informationen für die
+Beleuchtungsberechnung zu haben. Dies erlaubt ihnen die Beleuchtungsberechnung
+an einem beliebigen Punkt aus einer beliebigen Blickrichtung.
 
-Beide Arten von Algorithmen haben jedoch Vor- und Nachteile. So sind blickwinkelabhängige Algorithmen gut geeignet um Spiegelungen, basierend auf der Blickrichtung des Betrachtes, zu berechnen, eignen sich aber weniger um gleichbleibende diffuse Anteile über weiter Flächen eines Bildes zu berechnen. Bei blickwinkelabhängigen Algorithmen verhält es sich genau umgekehrt.
+Beide Arten von Algorithmen haben jedoch Vor- und Nachteile. So sind
+blickwinkelabhängige Algorithmen gut geeignet um Spiegelungen, basierend auf
+der Blickrichtung des Betrachtes, zu berechnen, eignen sich aber weniger um
+gleichbleibende diffuse Anteile über weiter Flächen eines Bildes zu berechnen.
+Bei blickwinkelabhängigen Algorithmen verhält es sich genau umgekehrt.
 
 \subsubsection{Renderinggleichung}
 \label{ssubsec:rendering_equation}
 
-Die unter~\ref{subsec:global_illumination_models} genannten Verfahren versuchen auszudrücken, wie sich Licht von einem Punkt im Raum zu einem anderen bewegt. Dabei beschreiben sie die Intensität des Lichtes, ausgehend vom ersten Punkt zum zweiten Punkt. Zusätzlich wird die Intensität des Lichtes, ausgehend von allen anderen Punkten, welche den ersten Punkt erreichen, und zum zweiten Punkt emitiert werden, beschrieben.
+Die unter~\ref{subsec:global_illumination_models} genannten Verfahren versuchen
+auszudrücken, wie sich Licht von einem Punkt im Raum zu einem anderen bewegt.
+Dabei beschreiben sie die Intensität des Lichtes, ausgehend vom ersten Punkt
+zum zweiten Punkt. Zusätzlich wird die Intensität des Lichtes, ausgehend von
+allen anderen Punkten, welche den ersten Punkt erreichen, und zum zweiten Punkt
+emitiert werden, beschrieben.
 
-James (Jim) Kajiya stellte 1986 die so genannte Renderinggleichung auf, welche genau dieses Verhalten beschreibt:
+James (Jim) Kajiya stellte 1986 die so genannte Renderinggleichung auf, welche
+genau dieses Verhalten beschreibt~\cite{kajiya_rendering_1986}
+und~\cite{foley_computer_1996}:
 \begin{equation}
-    I(x, x') = g(x, x')[\epsilon(x, x') + \int\limits_{s}\rho(x, x', x'')I(x', x'')dx'']
+    I(x, x') = g(x, x')[\varepsilon(x, x') + \int\limits_{S}\rho(x, x', x'')I(x', x'')dx'']
 \end{equation}
 wobei gilt:
 
-\captionof{table}{Beschreibung der Komponenten der Renderinggleichung nach~\cite{kajiya_rendering_1986}[S. 143]}
-\begin{tabular}{ l l }
-    $ x', x' und x''   $: & Punkte in der Umgebung                                                                                                  \\
-    $ I(x, x')         $: & Lichtintensität von Punkt $x'$ nach Punkt $x$                                                                           \\
-    $ g(x, x')         $: & \parbox[t]{14cm}{Ein auf die Geometrie bezogener Term:                                                                  \\
-                                 \hspace*{12mm} $0$:     \hspace*{6mm} $x$ und $x'$ verdecken sich                                                  \\
-                                 \hspace*{12mm} $1/r^2$: \hspace*{1mm} $x$ und $x'$ sehen sich, wobei $r$ die Distanz zwischen $x$ und $x'$ ist}    \\
-    $ \epsilon(x, x')  $: & Intensität des Lichtes, welches von $x'$ nach $x$ emitiert wird                                                         \\
-    $ \rho(x, x', x'') $: & Intensität des Lichtes, welches von $x''$ durch die Oberfläche bei $x'$ nach $x$ gestreut wird                          \\
-    $ \int\limits_{S}  $: & \parbox[t]{14cm}{Integral über die Vereinigung aller Flächen, daher $ S = \bigcup{S_{i}} $                              \\
-                            Dies bedeutet, dass die Punkte $x$, $x'$ und $x''$ über alle Flächen aller Objekte der Szene ``streifen''.              \\
-                            Wobei es sich bei $S_{0}$ um eine zusätzliche Fläche handelt, welche als Hintergrund verwendet wird.                    \\
-                            $S_{0}$ ist dabei eine Hemisphäre, welche die gesamte Szene umspannt.}                                                  \\
-\end{tabular}
+\begin{itemize}
+    \item $x, x' \text{und } x''$: Punkte in der Umgebung
+    \item $ I(x, x')$:            Lichtintensität von Punkt $x'$ nach Punkt $x$
+    \item $ g(x, x')$:            Ein auf die Geometrie bezogener Term\\
+                                  \hspace*{4mm} $0$:     \hspace*{6mm} $x$ und $x'$ verdecken sich\\
+                                  \hspace*{4mm} $1/r^2$: \hspace*{1mm} $x$ und $x'$ sehen sich, wobei $r$ die Distanz zwischen $x$ und $x'$ ist
+    \item $\epsilon(x, x')$:      Intensität des Lichtes, welches von $x'$ nach $x$ emitiert wird
+    \item $\rho(x, x', x'')$:     Intensität des Lichtes, welches von $x''$
+                                  durch die Oberfläche bei $x'$ nach $x$
+                                  gestreut wird
+    \item $\int\limits_{S}$:      Integral über die Vereinigung aller Flächen,
+                                  daher $ S = \bigcup{S_{i}} $\\
+                                      Dies bedeutet, dass die Punkte $x$, $x'$
+                                      und $x''$ über alle Flächen aller Objekte
+                                      der Szene ``streifen''.  Wobei es sich
+                                      bei $S_{0}$ um eine zusätzliche Fläche
+                                      handelt, welche als Hintergrund verwendet
+                                      wird.  $S_{0}$ ist dabei eine Hemisphäre,
+                                      welche die gesamte Szene umspannt.
+\end{itemize}
 
 \section{Ray Casting}
 \label{sec:ray_casting}
@@ -123,14 +183,15 @@ Dies führt zu den folgenden Schlussfolgerungen:
         werden, was zu Abtastfehlern führen kann.
 \end{itemize}
 Um die Abtastfehler zu minieren, können die Richtungen des Abtasten anhand der Lichtquellen priorisiert werden.
+\todo[inline]{Punkte mehr ausführen; Integration zeigen mit Diskretition; auch Berechnungen}
 
 \newpage{}
 
 Ein möglicher Algorithmus, wie solch ein Verfahren umgesetzt werden kann,
 findet sich in~\ref{fig:ray_casting:high_level}.
 
-\begin{python}[caption={Eine abstrakte Umsetzung des Ray
-        Castings\protect\footnotemark}.,label={fig:ray_casting:high_level},captionpos=b]
+\begin{lstlisting}[language=Python,caption={Eine abstrakte Umsetzung des Ray
+        Castings\protect\footnotemark.},label={fig:ray_casting:high_level},captionpos=b,emph={ray_cast}]
 def ray_cast():
     # "pixels" is a list of all pixels of the image plane
     for pixel in pixels:
@@ -154,7 +215,7 @@ def ray_cast():
             if is_smallest_intersection(p, intersections):
                 pixel = sum
             intersections.append(p)
-\end{python}
+\end{lstlisting}
 \footnotetext{Algorithmus in Pseudocode gemäss~\cite{hughes_computer_2013}[Kapitel 15, Seite 391, Auflistung 15.2]}
 
 Das Verfahren wurde erstmals 1968 in der Publikation ``Some techniques for
